--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,10 @@
    pool:
-     name: default
+     name: Default
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: 'deployment'
+    Contents: '*.json'
+    TargetFolder: '$(build.artifactstagingdirectory)/Templates'
      demands:
      - agent.name -equals DESKTOP-MQ4L9DH
    trigger:
