--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,11 @@
          SourceFolder: deployment
          Contents: '*.json'
          TargetFolder: '$(build.artifactstagingdirectory)/Templates'
+     - task: NodeTool@0
+       inputs:
+         versionSource: 'spec'
+         versionSpec: '6.x'
+         checkLatest: true
      - task: Npm@1
        displayName: 'npm custom'
        inputs:
