--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,8 @@
    pool:
      name: default
      demands:
-      -test
+      - test
+      - Agent.Version -equals 2.199
    trigger:
      - master
    steps:
